--- a/prarthanamanjari/index.html
+++ b/prarthanamanjari/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 
                 <header>
-                    <img src="PM-LOGO.png" alt=“പ്രാർത്ഥനാമഞ്ജരി” style="width:100px;height:100px;">
+                    <img src="https://reeba256.github.io/prarthanamanjari/PM-LOGO.png" alt=“പ്രാർത്ഥനാമഞ്ജരി” style="width:100px;height:100px;">
                         <h1>പ്രാർത്ഥനാമഞ്ജരി</h1>
                         </header>
                 
