--- a/privacypolicy/index.html
+++ b/privacypolicy/index.html
@@ -1,1 +1,13 @@
-Privacy
+<html>
+    <body>
+    
+    <h1>PrivacyPolicy</h1>
+    <p>
+    Your submission of information on this App/Site to is subject to our Global Privacy Policy for Guests, which is hereby incorporated into the Terms & Conditions. Any information that we collect will be secured and wont share it with any others. The contents are also free to use for any purpose whatsoever any ideas, concept, content, techniques, or know-how in such communications without limitation and without any obligations to you. 
+    <br><br>
+    <h2>Availability</h2>
+    The App/Site is available to anyone with Internet access. However, the Site may not be continuously available due to maintenance or repairs or due to computer problems or crashes, disruption in Internet service or other unforeseen circumstances. The Site contains information on our services, not all of which are available in every location. A reference to a product or service on the Site does not imply that such product or service is or will be available in your location. The content of the Site, including advertising content, is intended for use and display only where its use and display are permissible in accordance with applicable laws and regulations. Each product or service is void where prohibited by law.
+    </p>
+    
+    </body>
+    </html>
