--- a/catholicprayers/index.html
+++ b/catholicprayers/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 
                 <header>
-                    <img src="https://dl.dropboxusercontent.com/s/xuhjjt2hzn1qmcb/C3.png?dl=0" alt=“CatholicPrayer” style="width:100px;height:100px;">
+                    <img src="https://reeba256.github.io/catholicprayers/C3.png?dl=0" alt=“CatholicPrayer” style="width:100px;height:100px;">
                         <h1>Catholic Prayers</h1>
                         </header>
                 
