--- a/indickeyboard/index.html
+++ b/indickeyboard/index.html
@@ -54,7 +54,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <div class="container">
                 <header>
-                    <img src="https://dl.dropboxusercontent.com/s/y3bl4kk7dl3fjz7/IndicLogo.png?dl=0" alt="Indic keyboard" style="width:100px;height:100px;">
+                    <img src="https://reeba256.github.io/indickeyboard/IndicLogo.png" alt="Indic keyboard" style="width:100px;height:100px;">
                         <h1><font face="Comic Sans MS">Indic Keyboard</h1>
                         </header>
                 
