--- a/oracionesp/index.html
+++ b/oracionesp/index.html
@@ -4,13 +4,13 @@
         <style>
             div.container {
                 width: 100%;
-                border: 1px solid #442626;
+                border: 1px solid #ffbf3d;
             }
         
         header{
             padding: 1em;
             color: white;
-            background-color: #442626;
+            background-color: #ffbf3d;
             clear: left;
             text-align: center;
         }
