--- a/oracionesp/index.html
+++ b/oracionesp/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 
                 <header>
-                    <img src="https://reeba256.github.io/oracionesp/icon.png?dl=0" alt=“Oraciones” style="width:100px;height:100px;">
+                    <img src="https://reeba256.github.io/catholicprayers/C3.png?dl=0" alt=“Oraciones” style="width:100px;height:100px;">
                         <h1>Oraciones</h1>
                         </header>
                 
