--- a/oracionesp/index.html
+++ b/oracionesp/index.html
@@ -22,7 +22,7 @@
         footer {
             padding: 1em;
             color: white;
-            background-color: #7c6060;
+            background-color: #ffde9a;
             clear: left;
             text-align: center;
         }
