--- a/GSense/index.html
+++ b/GSense/index.html
@@ -4,13 +4,13 @@
         <style>
             div.container {
                 width: 100%;
-                border: 1px solid #d1d1d1;
+                border: 1px solid #2c2c2c;
             }
         
         header{
             padding: 1em;
             color: white;
-            background-color: #d1d1d1;
+            background-color: #2c2c2c;
             clear: left;
             text-align: center;
         }
@@ -22,7 +22,7 @@
         footer {
             padding: 1em;
             color: white;
-            background-color: #d1d1d1;
+            background-color: #2c2c2c;
             clear: left;
             text-align: center;
         }
@@ -55,7 +55,7 @@
             <div class="container">
                 <header>
                     <img src="https://reeba256.github.io/GSense/Icon.png" alt="G-Sense" style="width:100px;height:100px;">
-                        <h1 style="color: #4285f4;">G-Sense</h1>
+                        <h1 style="color: #ffffff;">G-Sense</h1>
                         </header>
                 
                 <!--            <nav>-->
