--- a/privacypolicy/index.html
+++ b/privacypolicy/index.html
@@ -1,11 +1,23 @@
 <html>
     <body>
     
-    <h1>PrivacyPolicy</h1>
+    <h1>Privacy Policy</h1>
     <p>
-    Your submission of information on this App/Site to is subject to our Global Privacy Policy for Guests, which is hereby incorporated into the Terms & Conditions. Any information that we collect will be secured and wont share it with any others. The contents are also free to use for any purpose whatsoever any ideas, concept, content, techniques, or know-how in such communications without limitation and without any obligations to you. 
+    Your submission of information on this App/Site to is subject to our Global Privacy Policy for Guests, which is hereby incorporated into the Terms & Conditions. Any information that we collect will be secured and wont share it with any others. The contents are also free to use for any purpose whatsoever any ideas, concept, content, techniques, or know-how in such communications without limitation and without any obligations to you. </p>
     <br><br>
-    <h2>Availability</h2>
+    <h1>Terms & Conditions</h1>
+    <p>
+    By accessing and placing an order with App, you confirm that you are in agreement with and bound by the terms of service contained
+    in the Terms & Conditions outlined below. These terms apply to the entire website and any email or other type of communication
+    between you and App.
+    Under no circumstances shall App team be liable for any direct, indirect, special, incidental or consequential damages, including, but
+    not limited to, loss of data or profit, arising out of the use, or the inability to use, the materials on this site, even if App team or an
+    authorized representative has been advised of the possibility of such damages. If your use of materials from this site results in the
+    need for servicing, repair or correction of equipment or data, you assume any costs thereof.
+    App will not be responsible for any outcome that may occur during the course of usage of our resources. We reserve the rights to
+    change prices and revise the resources usage policy in any moment</p>
+    <br><br>
+    <h1>Availability</h1>
     The App/Site is available to anyone with Internet access. However, the Site may not be continuously available due to maintenance or repairs or due to computer problems or crashes, disruption in Internet service or other unforeseen circumstances. The Site contains information on our services, not all of which are available in every location. A reference to a product or service on the Site does not imply that such product or service is or will be available in your location. The content of the Site, including advertising content, is intended for use and display only where its use and display are permissible in accordance with applicable laws and regulations. Each product or service is void where prohibited by law.
     </p>
     
