--- a/2ptapball/index.html
+++ b/2ptapball/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 
                 <header>
-                    <img src="https://reeba256.github.io/tapwar/Icon.png?dl=0" alt=“Kerala Lottery” style="width:100px;height:100px;">
+                    <img src="https://reeba256.github.io/2ptapball/Icon.png?dl=0" alt="2P Tap Ball" style="width:100px;height:100px;">
                         </header>
                 
                 <!--            <nav>-->
