--- a/es_terms_privacy/index.html
+++ b/es_terms_privacy/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> <html> <head> <meta http-equiv="content-type" content="text-html; charset=utf-8"> <link rel="stylesheet" href="styles.css"> </head> <body>
     
-    <h1>Términos, condiciones y política de privacidad</h1> <h3>(Terms & Conditions & Privacy Policy)</h3><hr/> <h2></h2>
     
+    <h1>Términos, condiciones y política de privacidad</h1> <h3>(Terms & Conditions & Privacy Policy)</h3><hr/> <h2></h2>
+    <img  src="tandc.jpg" class="imgcenter"/>
     <p>
     <h3>Términos y condiciones</h3>
 
