--- a/privacypolicy/index.html
+++ b/privacypolicy/index.html
@@ -1,11 +1,15 @@
-<html>
+
+    <!DOCTYPE html> <html> <head> <meta http-equiv="content-type" content="text-html; charset=utf-8"> <link rel="stylesheet" href="styles.css"> </head>
     <body>
-    
-    <h1>Privacy Policy</h1>
+        <center>
+        <h1>Terms & Conditions & Privacy Policy</h1><hr/> <h2></h2>
+        <img  src="tandc.jpg" class="imgcenter"/>
+
+    <h2>Privacy Policy</h2>
     <p>
     Your submission of information on this App/Site to is subject to our Global Privacy Policy for Guests, which is hereby incorporated into the Terms & Conditions. Any information that we collect will be secured and wont share it with any others. The contents are also free to use for any purpose whatsoever any ideas, concept, content, techniques, or know-how in such communications without limitation and without any obligations to you. </p>
     <br><br>
-    <h1>Terms & Conditions</h1>
+    <h2>Terms & Conditions</h2>
     <p>
     By accessing and placing an order with App, you confirm that you are in agreement with and bound by the terms of service contained
     in the Terms & Conditions outlined below. These terms apply to the entire website and any email or other type of communication
@@ -17,7 +21,7 @@
     App will not be responsible for any outcome that may occur during the course of usage of our resources. We reserve the rights to
     change prices and revise the resources usage policy in any moment</p>
     <br><br>
-    <h1>Availability</h1>
+    <h2>Availability</h2>
     The App/Site is available to anyone with Internet access. However, the Site may not be continuously available due to maintenance or repairs or due to computer problems or crashes, disruption in Internet service or other unforeseen circumstances. The Site contains information on our services, not all of which are available in every location. A reference to a product or service on the Site does not imply that such product or service is or will be available in your location. The content of the Site, including advertising content, is intended for use and display only where its use and display are permissible in accordance with applicable laws and regulations. Each product or service is void where prohibited by law.
     </p>
     
