--- a/cardwisepro/index.html
+++ b/cardwisepro/index.html
@@ -10,7 +10,7 @@
         header{
             padding: 1em;
             color: white;
-            background-color: #6500be;
+            background-color: #d19cff;
             clear: left;
             text-align: center;
         }
@@ -22,7 +22,7 @@
         footer {
             padding: 1em;
             color: white;
-            background-color: #6500be;
+            background-color: #d19cff;
             clear: left;
             text-align: center;
         }
